--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -19,7 +19,6 @@ body {
 }
 
 .layout {
-    overflow: scroll;
     position: inherit;
     background-color: rgba(30, 30, 30, 0.80);
 
